Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- made the default profile define the new roles_managing_local_roles
  property
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 