@@ -19,5 +19,10 @@
  <field name="preview_width" meta_type="CPS Int Field">
   <property name="default_expr">python:64</property>
  </field>
- <field name="ziparchiveuploader" meta_type="CPS File Field"/>
+ <field name="ziparchiveuploader" meta_type="CPS File Field">
+  <property name="read_ignore_storage">True</property>
+  <property name="write_ignore_storage">True</property>
+  <property
+    name="write_process_expr">python: modules['Products.CPSDocument.createFile'].createFile(proxy, value)</property>
+ </field>
 </object>
