@@ -8,6 +8,8 @@ Bug fixes
 ~~~~~~~~~
 - made the default profile define the new roles_managing_local_roles
   property
+- added missing field expression for the Zip Uploader feature of the
+  ImageGallery
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
